--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,17 +12,18 @@
     android:paddingBottom="16dp"
     android:theme="@style/ThemeOverlay.AppCompat">
 
-    <ImageView
-        android:id="@+id/imageView3"
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/usuarioImagen"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/icon_photo" />
+        android:layout_height="118dp"
+        android:layout_gravity="center"
+        android:src="@drawable/icon_photo" />
 
     <TextView
         android:id="@+id/usuarioNombrePerfil"
-        android:layout_width="136dp"
-        android:layout_height="43dp"
+        android:layout_width="121dp"
+        android:layout_height="75dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:paddingTop="5dp"
