--- a/app/src/main/res/layout/activity_crear_receta.xml
+++ b/app/src/main/res/layout/activity_crear_receta.xml
@@ -138,14 +138,14 @@
         app:layout_constraintTop_toBottomOf="@+id/text_view_crear" />
 
     <ListView
-        android:id="@+id/list_ingredientes"
+        android:id="@+id/list_directorio"
         android:layout_width="373dp"
         android:layout_height="366dp"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_ingresar_ingrediente"
+        app:layout_constraintTop_toBottomOf="@+id/txt_ingresar_numero_dt"
         app:layout_constraintVertical_bias="0.031"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -172,7 +172,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toEndOf="@+id/txt_ingresar_ingrediente"
+        app:layout_constraintStart_toEndOf="@+id/txt_ingresar_numero_dt"
         app:layout_constraintTop_toBottomOf="@+id/rating_bar"
         tools:ignore="TextContrastCheck" />
 
