--- a/app/src/main/res/layout/fragmento_favoritos.xml
+++ b/app/src/main/res/layout/fragmento_favoritos.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_view_favoritos"
+        android:id="@+id/list_view_main_recetas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
