--- a/app/src/main/res/layout/fragmento_notificaciones.xml
+++ b/app/src/main/res/layout/fragmento_notificaciones.xml
@@ -9,10 +9,12 @@
 
     <ListView
         android:id="@+id/list_view_notificaciones"
-        android:layout_width="409dp"
-        android:layout_height="657dp"
+        android:layout_width="413dp"
+        android:layout_height="593dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
