--- a/app/src/main/res/layout/activity_crear_receta.xml
+++ b/app/src/main/res/layout/activity_crear_receta.xml
@@ -92,7 +92,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_categoria"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="DuplicateClickableBoundsCheck" />
 
     <ImageView
         android:id="@+id/btn_agregar_imagen_receta_f"
@@ -104,8 +105,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_view_crear"
         app:srcCompat="@drawable/btn_agregar_imagen_receta" />
+-->
     <!--Fin Primera Fase-->
-
     <!--Inicio Segunda Fase-->
 
    <RatingBar
@@ -198,8 +199,8 @@
         app:layout_constraintEnd_toStartOf="@+id/text_view_crear"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />
+-->
     <!--Fin Segunda Fase-->
 
     <!--Inicio Tercera Fase-->
@@ -226,17 +227,15 @@
 
     <EditText
         android:id="@+id/txt_pasos"
-        android:layout_width="379dp"
-        android:layout_height="424dp"
+        android:layout_width="365dp"
+        android:layout_height="352dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
@@ -287,6 +286,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/textView001"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="64dp"
+        android:text="Calorias (Promedio)"
+        app:layout_constraintBottom_toTopOf="@+id/btn_crear_receta_final"
+        app:layout_constraintEnd_toStartOf="@+id/txt_calorias"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.103" />
+
+    <EditText
+        android:id="@+id/txt_calorias"
+        android:layout_width="95dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:hint="kcal"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/btn_crear_receta_final"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_tiempo_preparacion"
+        app:layout_constraintVertical_bias="0.2"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/imagen_calorias"
+        android:layout_width="43dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="32dp"
+        android:text="imagen_calorias"
+        app:layout_constraintBottom_toTopOf="@+id/btn_crear_receta_final"
+        app:layout_constraintEnd_toStartOf="@+id/textView001"
+        app:layout_constraintHorizontal_bias="0.228"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.105" />
 
     <!--Fin Tercera Fase-->
 
