--- a/app/src/main/res/layout/fragmento_directorio.xml
+++ b/app/src/main/res/layout/fragmento_directorio.xml
@@ -21,7 +21,7 @@
         android:layout_width="274dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:hint="Escribe un nuevo numero"
+        android:hint="Escribe un numero numero"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/list_directorio"
         app:layout_constraintEnd_toEndOf="parent"
