--- a/app/src/main/res/menu/menu_usuario.xml
+++ b/app/src/main/res/menu/menu_usuario.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_favoritos"
             android:icon="@drawable/ic_favorite"
-            android:title="Mis favoritos"/>
+            android:title="Mis Favoritos"/>
 
         <item
             android:id="@+id/nav_lista"
@@ -24,6 +24,11 @@
             android:id="@+id/nav_cronometro"
             android:icon="@drawable/ic_timer"
             android:title="Cronometro"/>
+
+        <item
+            android:id="@+id/nav_lista_compras"
+            android:icon="@drawable/ic_lista_compras"
+            android:title="Lista de Compras" />
 
         <item
             android:id="@+id/nav_directorio"
